# PhantomMail

./: .bumpversion.cfg  .gitignore  pyproject.toml
.github/: copilot-instructions.md
examples/: create_customers.sh  create_test_data.ipynb  eu_addresses.csv  usage.ipynb
src/phantommail/: main.py
src/phantommail/cli/: __init__.py  menu.py  runner.py
src/phantommail/graphs/: graph.py  nodes.py
